Add --with-forward-dependencies option
Add new command line option --with-forward-dependencies. Set this to
"false" to suppress the normal propagation of changes in append mode
from nodes to ways to relations. This is intended mainly for Nominatim
which doesn't need this propagation.

I have chosen the flag name as --with-forward-dependencies=VALUE to
leave the possibility open to later allow values like "nodes-only" or
something like that. But currently only "true" and "false" are
supported.

This replaces the hardcoded check for the gazeteer output in the middle.
As the (now deleted) comment in the code shows an earlier intention was
to let the output tell the middle whether it needs to handle the forward
dependencies. But this commit is not going that route: Some outputs can
not know whether the dependency management is needed (i.e. the flex
output) without having an extra flag for that. But if we need a flag
anyway, it makes more sense to have it as an overall option.

Fixes #1304

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -219,14 +219,14 @@ The default is disabled.
 .RS
 .RE
 .TP
-.B \[en]middle\-schema=SCHEMA
+.B \-\-middle\-schema=SCHEMA
 Use PostgreSQL schema SCHEMA for all tables, indexes, and functions in
 the middle (default is no schema, i.e.\ the \f[C]public\f[] schema is
 used).
 .RS
 .RE
 .TP
-.B \[en]middle\-way\-node\-index\-id\-shift=SHIFT
+.B \-\-middle\-way\-node\-index\-id\-shift=SHIFT
 Set ID shift for way node bucket index in middle.
 Experts only.
 See documentation for details.
@@ -369,7 +369,7 @@ Compute area column using spherical mercator coordinates.
 .RS
 .RE
 .TP
-.B \[en]output\-pgsql\-schema=SCHEMA
+.B \-\-output\-pgsql\-schema=SCHEMA
 Use PostgreSQL schema SCHEMA for all tables, indexes, and functions in
 the pgsql and multi outputs (default is no schema, i.e.\ the
 \f[C]public\f[] schema is used).
@@ -402,6 +402,12 @@ index after the other.
 .TP
 .B \-\-number\-processes=THREADS
 Specifies the number of parallel threads used for certain operations.
+.RS
+.RE
+.TP
+.B \-\-with\-forward\-dependencies=BOOL
+Propagate changes from nodes to ways and node/way members to relations
+(Default: \f[C]true\f[]).
 .RS
 .RE
 .SH SEE ALSO
