--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -4,7 +4,7 @@
 osm2pgsql \- Openstreetmap data to PostgreSQL converter
 .SH SYNOPSIS
 .PP
-\f[B]osm2pgsql\f[] [\f[I]OPTIONS\f[]] OSM\-FILE
+\f[B]osm2pgsql\f[] [\f[I]OPTIONS\f[]] OSM\-FILE\&...
 .SH DESCRIPTION
 .PP
 \f[B]osm2pgsql\f[] imports OpenStreetMap data into a PostgreSQL/PostGIS
@@ -14,6 +14,7 @@ geocoder and other applications processing OSM data.
 .PP
 \f[B]osm2pgsql\f[] can run in either \[lq]create\[rq] mode (the default)
 or in \[lq]append\[rq] mode (option \f[B]\-a, \-\-append\f[]).
+.PP
 In \[lq]create\[rq] mode osm2pgsql will create the database tables
 required by the configuration and import the OSM file(s) specified on
 the command line into those tables.
