Document that --drop also drops the flat nodes file

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -169,7 +169,8 @@ greatly increased.
 .RE
 .TP
 .B \-\-drop
-Drop the slim mode tables from the database once the import is complete.
+Drop the slim mode tables from the database and the flat node file once
+the import is complete.
 This can greatly reduce the size of the database, as the slim mode
 tables typically are the same size, if not slightly bigger than the main
 tables.
