--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -224,9 +224,9 @@ This is the default and should be typically used.
 .RE
 .TP
 .B \-x, \-\-extra\-attributes
-Include attributes for each object in the database.
-This includes the username, userid, timestamp and version.
-Note: this option also requires additional entries in your style file.
+Include attributes of each object in the middle tables and make them
+available to the outputs.
+Attributes are: user name, user id, changeset id, timestamp and version.
 .RS
 .RE
 .TP
