Change default for --log-progress option from auto to true

--- a/docs/osm2pgsql.1
+++ b/docs/osm2pgsql.1
@@ -69,8 +69,9 @@ Set log level (`debug', `info' (default), `warn', or `error').
 .TP
 .B \-\-log\-progress=VALUE
 Enable (\f[C]true\f[]) or disable (\f[C]false\f[]) progress logging.
-The default is \f[C]auto\f[] which will enable progress logging on the
+Setting this to \f[C]auto\f[] will enable progress logging on the
 console and disable it if the output is redirected to a file.
+Default: true.
 .RS
 .RE
 .TP
