--- a/docs/osm2pgsql-replication.1
+++ b/docs/osm2pgsql-replication.1
@@ -3,7 +3,7 @@
 osm2pgsql-replication
 .SH SYNOPSIS
 .B osm2pgsql-replication
-[-h] {init,update} ...
+[-h] {init,update,status} ...
 .SH DESCRIPTION
 Update an osm2pgsql database with changes from a OSM replication server.
 .br
@@ -33,6 +33,9 @@ how to use osm2pgsql\-replication.
 .TP
 \fBosm2pgsql-replication\fR \fI\,update\/\fR
     Download newly available data and apply it to the database.
+.TP
+\fBosm2pgsql-replication\fR \fI\,status\/\fR
+    Print information about the current replication status, optionally as JSON.
 .SH OPTIONS 'osm2pgsql-replication init'
 usage: osm2pgsql-replication init [-h] [-q] [-v] [-d DB] [-U NAME] [-H HOST]
                                   [-P PORT] [-p PREFIX]
@@ -176,6 +179,120 @@ Run updates only once, even when more data is available.
 .TP
 \fB\-\-post\-processing\fR SCRIPT
 Post\-processing script to run after each execution of osm2pgsql.
+
+.TP
+\fB\-q\fR, \fB\-\-quiet\fR
+Print only error messages
+
+.TP
+\fB\-v\fR, \fB\-\-verbose\fR
+Increase verboseness of output
+
+.TP
+\fB\-d\fR DB, \fB\-\-database\fR DB
+Name of PostgreSQL database to connect to or conninfo string
+
+.TP
+\fB\-U\fR NAME, \fB\-\-username\fR NAME
+PostgreSQL user name
+
+.TP
+\fB\-H\fR HOST, \fB\-\-host\fR HOST
+Database server host name or socket location
+
+.TP
+\fB\-P\fR PORT, \fB\-\-port\fR PORT
+Database server port
+
+.TP
+\fB\-p\fR PREFIX, \fB\-\-prefix\fR PREFIX
+Prefix for table names (default 'planet_osm')
+
+
+.SH OPTIONS 'osm2pgsql-replication status'
+usage: osm2pgsql-replication status [-h] [-q] [-v] [-d DB] [-U NAME] [-H HOST]
+                                    [-P PORT] [-p PREFIX] [--json]
+
+Print information about the current replication status, optionally as JSON.
+.br
+
+.br
+Sample output:
+.br
+
+.br
+    2021\-08\-17 15:20:28 [INFO]: Using replication service 'https://planet.openstreetmap.org/replication/minute', which is at sequence 4675115 ( 2021\-08\-17T13:19:43Z )
+.br
+    2021\-08\-17 15:20:28 [INFO]: Replication server's most recent data is <1 minute old
+.br
+    2021\-08\-17 15:20:28 [INFO]: Local database is 8288 sequences behind the server, i.e. 5 day(s) 20 hour(s) 58 minute(s)
+.br
+    2021\-08\-17 15:20:28 [INFO]: Local database's most recent data is 5 day(s) 20 hour(s) 59 minute(s) old
+.br
+
+.br
+
+.br
+With the '\-\-json' option, the status is printed as a json object.
+.br
+
+.br
+    {
+.br
+      "server": {
+.br
+        "base_url": "https://planet.openstreetmap.org/replication/minute",
+.br
+        "sequence": 4675116,
+.br
+        "timestamp": "2021\-08\-17T13:20:43Z",
+.br
+        "age_sec": 27
+.br
+      },
+.br
+      "local": {
+.br
+        "sequence": 4666827,
+.br
+        "timestamp": "2021\-08\-11T16:21:09Z",
+.br
+        "age_sec": 507601
+.br
+      },
+.br
+      "status": 0
+.br
+    }
+.br
+
+.br
+
+.br
+'status' is 0 if there were no problems getting the status. 1 & 2 for
+.br
+improperly set up replication. 3 for network issues. If status ≠ 0, then
+.br
+the 'error' key is an error message (as string). 'status' is used as the
+.br
+exit code.
+.br
+
+.br
+'server' is the replication server's current status. 'sequence' is it's
+.br
+sequence number, 'timestamp' the time of that, and 'age_sec' the age of the
+.br
+data in seconds.
+.br
+
+.br
+'local' is the status of your server.
+
+
+.TP
+\fB\-\-json\fR
+Output status as json.
 
 .TP
 \fB\-q\fR, \fB\-\-quiet\fR
